--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-* {
-    border: 1px solid red
-}
 html {
     height: 100%;
 }
@@ -13,21 +10,71 @@ body {
     justify-content: center;
 }
 
-.display {
-    min-height: 70px;
-    position: relative;
-    margin: 5px 20px;
+.calculator {
+    border: 2px solid black;
     border-radius: 10px;
+    background-color: #ffd19f;
+    border: 2px solid #422800;
+    box-shadow: #422800 4px 4px 0 0;
+}
+
+.display {
+    min-height: 100px;
+    position: relative;
+    margin: 10px 20px;
+    border-radius: 10px;
+    border: 2px solid #422800;
+    box-shadow: #422800 0px 5px 0 0;
+    background-color: #fbeee0;
+    color: #422800;
+}
+
+.display input {
+    border-radius: 5px;
+    background-color: #ffffff;
+    border: 2px solid #422800;
+    box-shadow: #422800 2px 2px 0 0;
+    color: #422800;
+    display: inline-block;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+#word {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    height: 30%;
+    font-size: 12px;
+    font-family: 'Press Start 2P', arial;
+}
+
+#word input{
+    flex-grow: 1;
+}
+
+#result {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 13%;
+    width: 70%;
+    font-family: 'Press Start 2P', arial;
 }
 
 #content {
     position: absolute;
-    bottom: 5px;
+    bottom: 15px;
     right: 10px;
     font-size: 40px;
     font-family: 'Press Start 2P', arial;
     max-width: 93%;
-    height: 80%;
+    height: 40%;
     text-align: right;
 }
 
@@ -44,7 +91,7 @@ body {
     gap:20px;
     height: 50px;
 
-    margin: 0px 20px 10px 20px;
+    margin: 10px 20px 0px 20px;
 }
 
 .main {
@@ -67,7 +114,6 @@ body {
     flex: 1 1 0;
     grid-template-columns: auto;
 
-
     border-radius: 12px;
     max-width: 70px;
     margin: 20px;
@@ -77,9 +123,35 @@ body {
     border-radius: 0;
 }
 
-button:hover {
-    cursor: pointer;
+/* CSS */
+button {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
+
+button:hover {
+  background-color: #fff;
+}
+
+button:active {
+  box-shadow: #422800 0px 0px 0 0;
+  transform: translate(2px, 2px);
+}
+
 
 #seven{
     border-radius: 10px 0 0 0;
